--- a/templates/read_all.html
+++ b/templates/read_all.html
@@ -29,7 +29,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        <a href="/create">
+        <a href="/user/new">
             <button class="btn btn-primary">Add a New User</button>
         </a>
     </div>
