--- a/templates/create.html
+++ b/templates/create.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div class="container-sm mt-5" style="width: 65%;">
+        <h1>Add a New User</h1>
+        <a href="/users">Home</a>
         <form action="/user/create" method="post">
             <div class="mb-3 form-group">
                 <label for="first_name" class="form-label">First Name:</label>
