--- a/templates/read_all.html
+++ b/templates/read_all.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link class="border-start" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Read All</title>
 </head>
 <body>
@@ -16,6 +16,7 @@
                     <th scope="col">Full Name</th>
                     <th scope="col">Email Address</th>
                     <th scope="col">Created At</th>
+                    <th scope="col">Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -25,11 +26,16 @@
                     <td class="border-start">{{user.first_name}} {{user.last_name}}  </td>
                     <td class="border-start"> {{user.email}} </td>
                     <td class="border-start"> {{user.created_at}} </td>
+                    <td class="border-start">
+                        <a href="/user/{{user.id}}">show</a>
+                        <a href="/user/{{user.id}}/edit">edit</a>
+                        <a href="/user/delete">delete</a>
+                    </td>                    
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-        <a href="/user/new">
+        <a class="border-start" href="/user/new">
             <button class="btn btn-primary">Add a New User</button>
         </a>
     </div>
