--- a/templates/user_info.html
+++ b/templates/user_info.html
@@ -20,7 +20,7 @@
             <li class="list-group-item">Last Updated: {{ user.updated_at}}</li>
         </ul>
         <a href="/user/{{user.id}}/edit">Update User</a>
-        <a href="/user/delete">Delete User</a>
+        <a href="/user/{{user.id}}/delete">Delete User</a>
     </div>
 </body>
 </html>
